--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Staff.cs" />
+    <Compile Include="Student.cs" />
     <Compile Include="Table.cs" />
   </ItemGroup>
   <ItemGroup>
